Añadí el contenido de Paola

--- a/src/customized/last_seek.mdx
+++ b/src/customized/last_seek.mdx
@@ -1,6 +1,9 @@
 import LastSeekImages from './LastSeekImages.astro';
 
 ### SEEK 2024
-El año pasado tuve la oportunidad de vivir SEEK 2024, que se llevó a cabo en Saint Louis, Missouri, EUA.
+Hace un año pude ir a vivir SEEK 2024 en Saint Louis, Missouri. Fui sin ninguna expectativa y salí con el corazón lleno de una manera que solo Dios puede llenar. Y esta es la principal razón por la que me esforzaré lo necesario para ir este año que viene.
+
+SEEK es una conferencia donde puedes ver la iglesia de jovenes viva y con muchas ganas de seguir a Cristo, a mi como estudiante joven me motiva a no rendirme en mi fe, a permanecer en el amor y a buscar servir siempre y sin medida.
+
 
 <LastSeekImages />
