--- a/src/customized/this_year.mdx
+++ b/src/customized/this_year.mdx
@@ -1,10 +1,2 @@
-import ThisYearImages from './ThisYearImages.astro';
 
-Gracias a la manera en que Dios obró en mi corazón el año pasado durante SEEK 2024, pude recibir la gracia de:
-- empezar un proceso de discernimiento vocacional
-- ser Director de Imagen para el grupo estudiantil de FOCUS en el Tecnológico de Monterrey
-- organizar eventos formativos y recreativos para la comunidad católica en campus
-- participar de un grupo de estudio bíblico y un grupo de discipulado
-- dirigir mi propio grupo de estudio bíblico para hombres en el Tec
-
-<ThisYearImages />
+Gracias a lo que Dios me permitió vivir en SEEK 2024 me conocí más a mí misma, me di cuenta que sí se puede ser santo hoy en día, conocí a personas que me inspiran a crecer en mi fe y me hizo ver la gran comunidad que tengo a mi alrededor.
